Thu Jan  7 15:18:59 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Added a `Byte type to HLVM to make strings easier to use.
	* Ported the ray tracer benchmark from OCaml to HLVM. HLVM is
	  significantly faster despite the use of the FFI to do sqrt.
	* Made runtime.cpp 64-bit happy (int -> long).


Mon Jan  4 07:49:18 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Inlined get_stack.
	* Changed the value "unit" to an undef rather than "int 0".
	* Fixed unnecessary allocation of mark state for empty (NULL) arrays:
	parallel n-queens is ~3% faster.
	* Fixed the calculator example.


Fri Jan  1 20:57:09 GMT 2010  Jon Harrop <jon@ffconsultancy.com>

	* Optimized thread-local data to be passed by pointer in function
	arguments, dramatically improving performance.
	* Removed some concurrency bugs in the GC.
	* Altered the parallel n-queens test to recursively spawn child
	threads.
	* Implemented ptr->size map in runtime.cpp to check for double frees
	when runtime is in debugging mode.


Mon Nov 30 01:14:49 GMT 2009  Jon Harrop <jon@ffconsultancy.com>

	* First working version of threads and stop-the-world GC. Only took 5
	days to implement!
	* Global list of active threads and GC state (running or stopping the
	world).
	* Thread local state keeps thread state (running or suspended) and
	shadow stack.
	* First thread to hit allocation quota starts a GC by suspending all
	other threads and performing the same mark+sweep algorithm, albeit
	using all shadow stacks, before resuming all other threads. The other
	threads spin while the GC is running.
	* Currently, every function checks the global state on entry to see if
	it needs to suspend itself. This is contention for the same lock from
	every function call on every thread which is very wasteful and is the
	main reason why HLVM is now 3x slower than it was. However, it is
	easily remedied by removing checks from leaf functions (that make no
	calls) and using a counter or even measuring elapsed real time to