@@ -1,3 +1,15 @@
+Sun Jan 10 16:29:16 GMT 2010  Jon Harrop <jon@ffconsultancy.com>
+
+	* Removed the use of AddressOf in the hash table test.
+	* Added --no-stack-handler option so you can remove the libsigsegv
+	handler that is used to detect stack overflows.
+	* Convert some remaining uses of GetValue in the GC to use the abstract
+	Seq.* API.
+	* Fixed a bug where Alloc wasn't initializing mark state so it could
+	already be marked when the mark phase starts and its children could go
+	unmarked and get reclaimed despite being reachable.
+
+
 Thu Jan  7 15:18:59 GMT 2010  Jon Harrop <jon@ffconsultancy.com>
 
 	* Added a `Byte type to HLVM to make strings easier to use.
